# udbot

./: .ci.yml  Cargo.toml  Dockerfile  Dockerfile.builder  Procfile  Readme.md  heroku.yml  push.sh
scripts/: getapidata.sh  logger.sh
src/: formatter.rs  helper.rs  logger.rs  main.rs
src/file_handling/: functions.rs
